# ai_agent_builder

./: Cargo.toml  settings.toml  test.txt
src/: candle_devices.rs  candle_test.rs  main.rs  settings.rs  token_output_stream.rs
src/models/: deepseek.rs  mod.rs  qwen.rs
